# ChordLab

./: .gitignore  LICENSE  PROJECT_BRIEF.md  README.md  chord_builder.py  launch_minilab.py  midi_logger.py  mido_stub.py  minilab3_display_colors.py  pyproject.toml  requirements.txt  run_engine.py  start_chordlab_stack.py
assets/: README.md
chordlab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
minilab-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json
minilab-ui/src/: App.tsx  color-presets.ts  paramMapping.ts  paramsStore.ts  styles.css  types.ts
minilab-ui/src/components/: PadColorGrid.tsx
minilab-ui/src/hooks/: useWebMIDI.ts
minilab-ui/src/midi/: encoders.ts  mapping.ts
tests/: test_chord_engine.py
