[project]
name = "chordlab"
version = "0.1.0"
description = "MiniLab 3 chord builder toolkit"
readme = "README.md"
authors = [{name = "MiniLab Team"}]
requires-python = ">=3.10"
dependencies = [
    "mido>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = "tests/test_*.py"
addopts = "-ra"
